--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -28,21 +28,21 @@ Contactpage_Contactadded_View=//td[text()='#text#']
 Contactpage_Contactedited_View=//td[text()='#text#']/parent::tr//td[text()='#text_2#']
 Contactpage_Contactadded_View_Expand=(.//section[contains(@class,'details')]//button[contains(@class,'white')])[2]
 Contactpage_Contactadded_View_Close=(.//section[contains(@class,'details')]//button[contains(@class,'white')])[1]
-Contacts_Section_Edit=//td[text()='#text#']/parent::tr//button[@data-for='edit']
+Contacts_Section_Edit=//td[text()='#text#']/parent::tr//button[@data-for='edit-tooltip']
 Contacts_Section_Edit_Update=//button[@type='submit' and text()='Update']
 Contacts_Section_Edit_Assertion=//div[text()='Contact updated successfully']
-Contacts_Section_Archive=//td[text()='#text#']/parent::tr//button[@data-for='archive']
+Contacts_Section_Archive=//td[text()='#text#']/parent::tr//button[@data-for='archive-tooltip']
 Contacts_Section_Archive_Assertion=//div[text()='1 Contact(s) Archived ']
 Contacts_Section_Unarchivepage=//div[@class='react-switch-bg']
-Contacts_Section_Unarchive=//td[text()='#text#']/parent::tr//button[@data-for='unarchive']
+Contacts_Section_Unarchive=//td[text()='#text#']/parent::tr//button[@data-for='unarchive-tooltip']
 Contacts_Section_Unarchive_Assertion=//div[text()='1 Contact(s) Unarchived ']
-Contacts_Section_Tag=//td[text()='#text#']/parent::tr//button[@data-for='tag']
+Contacts_Section_Tag=//td[text()='#text#']/parent::tr//button[@data-for='tag-tooltip']
 Contacts_Section_Tag_Close=//div[@class='relative modal']//button[@class='absolute right-0 z-10 top-2']
 Contacts_Section_Add_Tag=//div[@class=' css-1q12wug']
 Contacts_Section_View_Add_Tag=//td[text()='#text#']/parent::tr//div[@class="flex items-center"]//button[@type='button']
 Contacts_Section_View_Add_Tag_Assertion=//div[@class="z-10 py-1"]//div[text()='#text#']
 Contacts_Section_Remove_Tag=//div[@class='flex flex-wrap gap-2 mt-4 tags']//div[text()='#text#']//button[@type='button']
-Contacts_Section_View=//td[text()='#text#']/parent::tr//button[@data-for='view']
+Contacts_Section_View=//td[text()='#text#']/parent::tr//button[@data-for='view-tooltip']
 Contacts_Section_View_Notes=//span[text()='Notes']
 Contacts_Section_View_Createnotes=//textarea[@id='notes']
 Contacts_Section_View_Savenotes=//button[text()='Save']
@@ -55,16 +55,16 @@ Contacts_Section_View_Editednotes=(//p[contains(@class,'text-sm') and text()='#t
 Contacts_Section_View_Assertion=//div[@class='flex-1 max-h-full overflow-y-auto bottom'] //span[text()='#text#']
 Contacts_Section_View_Deletenotes=//div[@class="flex gap-3"]//button[@data-for='delete']
 Contacts_Section_View_Deletenotes_Assertion=//div[text()='Deleted Note Successfully']
-Contacts_Section_Delete=//td[text()='#text#']/parent::tr//button[@data-for='delete']
+Contacts_Section_Delete=//td[text()='#text#']/parent::tr//button[@data-for='delete-tooltip']
 Contacts_Section_Delete_Confirmation=//div[@class="flex justify-end buttons"]//button[2]
 Contacts_Section_email_in_Grid_Parameterizable=//td[text()='#text#']
 Contacts_Section_checkbox_Multiple=//td[text()='#text#'] /parent::tr//input[@type="checkbox"]
 Contacts_Section_checkbox_Multiple_Archive=//div[@class="flex items-center top__left"]//div[@class="react-switch-bg"]
 Contacts_Section_checkbox_Multiple_Unarchive=//div[@class="flex items-center top__left"]//div[@class="react-switch-bg"]
-Contacts_Section_checkbox_Multiple_Delete=//div[@class="flex items-center top__left"]//button[@data-for='delete']
-Contacts_Section_checkbox_Multiple_Tag=//div[@class="flex items-center top__left"]//button[@data-for='tag']
+Contacts_Section_checkbox_Multiple_Delete=//div[@class="flex items-center top__left"]//button[@data-for='delete-tooltip']
+Contacts_Section_checkbox_Multiple_Tag=//div[@class="flex items-center top__left"]//button[@data-for='tag-tooltip']
 Contacts_Section_Filter=//button[text()='Filter']
-Contacts_Section_close_arrowButton=//button[@data-for='close']
+Contacts_Section_close_arrowButton=//button[@data-for='close-tooltip']
 Main_section_Template_Link=//span[text()='Templates']
 Template_Section_Create=//button[text()='Create']
 applicaation_Header_user_dropdown_Link=//div[@class='relative profile-card']//button
@@ -87,6 +87,7 @@ Contacts_Section_Save_Filter_Assertion=//div[text()='Filter Saved Successful']
 Contacts_Section_Saved_Filter=//div[@class='h-screen overflow-auto ']//p[text()='Saved Filters']
 Contacts_Section_Search_Filter=//div[@class="relative "]//input[@placeholder="Search Views"]
 Contacts_Section_View_Saved_Filter=//div[@class='flex flex-col']//h2[text()='#text#']
+Contacts_Section_Invalid_Email_Message=//p[text()='Invalid email address']
 
 
 
@@ -112,29 +113,29 @@ Accounts_Section_Create_No_Of_Employee=//input[@id='numOfEmps']
 Accounts_Section_Create_Add=//button[@type='submit' and text()='Add']
 Accountpage_Accountadded_Message=//div[text()='Account Created']
 Accountpage_Accountadded_View=//td[text()='#text#']
-Accounts_Section_Edit=//td[text()='#text#']/parent::tr//button[@data-for='edit']
+Accounts_Section_Edit=//td[text()='#text#']/parent::tr//button[@data-for='edit-tooltip']
 Accounts_Section_Edit_Update=//button[@type='submit' and text()='Update']
 Accounts_Section_Edit_Assertion=//div[text()='Company updated successfully']
 Accountpage_Accountedited_View=//td[text()='#text#']/parent::tr//td[text()='#text_2#']
-Accounts_Section_Archive=//td[text()='#text#']/parent::tr//button[@data-for='archive']
+Accounts_Section_Archive=//td[text()='#text#']/parent::tr//button[@data-for='archive-tooltip']
 Accounts_Section_Archive_Assertion=//div[@id='SUCCESS1 Account(s) Archived']
 Accounts_Section_Unarchivepage=//div[@class='react-switch-bg']
-Accounts_Section_Unarchive=//td[text()='#text#']/parent::tr//button[@data-for='unarchive']
+Accounts_Section_Unarchive=//td[text()='#text#']/parent::tr//button[@data-for='unarchive-tooltip']
 Accounts_Section_Unarchive_Assertion=//div[@id='SUCCESS1 Account(s) Unarchived']
 Accounts_Section_checkbox_Multiple=//td[text()='#text#'] /parent::tr//input[@type="checkbox"]
 Accounts_Section_checkbox_Multiple_Archive=//div[@class="flex items-center top__left"]//div[@class="react-switch-bg"]
 Accounts_Section_checkbox_Multiple_Unarchive=//div[@class="flex items-center top__left"]//div[@class="react-switch-bg"]
-Accounts_Section_Tag=//td[text()='#text#']/parent::tr//button[@data-for='tag']
+Accounts_Section_Tag=//td[text()='#text#']/parent::tr//button[@data-for='tag-tooltip']
 Accounts_Section_Tag_Close=//div[@class='relative modal']//button[@class='absolute right-0 z-10 top-2']
 Accounts_Section_Add_Tag=//div[@class=' css-1q12wug']
 Accounts_Section_View_Add_Tag=//td[text()='#text#']/parent::tr//div[@class="flex items-center"]//button[@type='button']
 Accounts_Section_View_Add_Tag_Assertion=//div[@class="z-10 py-1"]//div[text()='#text#']
 Accounts_Section_Remove_Tag=//div[@class='flex flex-wrap gap-2 mt-4 tags']//div[text()='#text#']//button[@type='button']
-Accounts_Section_checkbox_Multiple_Tag=//div[@class="flex items-center top__left"]//button[@data-for='tag']
-Accounts_Section_Delete=//td[text()='#text#']/parent::tr//button[@data-for='delete']
+Accounts_Section_checkbox_Multiple_Tag=//div[@class="flex items-center top__left"]//button[@data-for='tag-tooltip']
+Accounts_Section_Delete=//td[text()='#text#']/parent::tr//button[@data-for='delete-tooltip']
 Accounts_Section_Delete_Confirmation=//div[@class="flex justify-end buttons"]//button[2]
-Accounts_Section_checkbox_Multiple_Delete=//div[@class="flex items-center top__left"]//button[@data-for='delete']
-Accounts_Section_View=//td[text()='#text#']/parent::tr//button[@data-for='view']
+Accounts_Section_checkbox_Multiple_Delete=//div[@class="flex items-center top__left"]//button[@data-for='delete-tooltip']
+Accounts_Section_View=//td[text()='#text#']/parent::tr//button[@data-for='view-tooltip']
 Accountpage_Accountadded_View_Expand=(.//section[contains(@class,'details')]//button[contains(@class,'white')])[2]
 Accountpage_Accountadded_View_Close=(.//section[contains(@class,'details')]//button[contains(@class,'white')])[1]
 Accounts_Section_View_Notes=//span[text()='Notes']
@@ -153,7 +154,7 @@ Accounts_Section_Filter=//button[text()='Filter']
 Accounts_Section_Create_Filter=//p[text()='Filters']
 Accounts_Section_Create_Filter_Sortby=//div[@class='mb-6']//div[@class=" css-1wy0on6"]
 Accounts_Section_Create_Filter_Lastmodified=//div[@class='mb-6']//div[text()='Last Modified Date']
-Accounts_Section_Create_Filter_Tags=//div[@class="my-3"]//div[text()='Tags']
+Accounts_Section_Create_Filter_Tags=//div[@class="my-3"]//div[text()='Tags-tooltip']
 Accounts_Section_Create_Filter_Noofemp=//div[@class="my-3"]//button[text()='numOfEmps']
 Accounts_Section_Create_Filter_Industry=//div[@class="my-3"]//input[@name='industry']
 Accounts_Section_Create_Filter_State=//div[@class="my-3"]//input[@name='state']
@@ -165,7 +166,9 @@ Accounts_Section_Save_Filter_Assertion=//div[text()='Filter Saved Successful']
 Accounts_Section_Saved_Filter=//div[@class='h-screen overflow-auto ']//p[text()='Saved Filters']
 Accounts_Section_Search_Filter=//div[@class="relative "]//input[@placeholder="Search Views"]
 Accounts_Section_View_Saved_Filter=//div[@class='flex flex-col']//h2[text()='#text#']
-
+Accounts_Section_Invalid_Website_Message=//p[text()='URL is not valid']
+Accounts_Section_Search=//input[@placeholder="Search"]
+Accounts_Section_Search_Assertion=//span[text()='#text#']
 
 Main_section_Tasks_Link=//nav[@class="w-full sidebar"]//span[text()='Tasks']
 Tasks_Section_Create_Button=//button[text()='Create']
@@ -180,6 +183,8 @@ Tasks_Section_Create_Sms=//div[contains(@class,'w-full flex items')]//button[8]
 Tasks_Section_Assign_Contact=//div[@id="contact"]
 Tasks_Section_Select_Contact=//div[text()='Ravi krishna']
 Tasks_Section_Date=//div[contains(@class,'react-datepicker')]//input[@placeholder="yyyy-dd-mm  hr:mm"]
+Tasks_Section_Select_Date=//div[@aria-label="Choose #text#"]
+Tasks_Section_Create=//div[@class='tab w-full']
 Tasks_Section_Description=//div[contains(@class,'form-group')]//textarea[@id='description']
 Tasks_Section_Create_Add=//button[text()='Add']
 Taskpage_Taskadded_Message=//div[text()='Task Added']
@@ -198,7 +203,8 @@ Tasks_Section_Unarchive_Assertion=//div[text()='1 Task(s) Unarchived ']
 Tasks_Section_checkbox_Multiple=//p[text()='#text#'] /ancestor::tr//input[@type="checkbox"]
 Tasks_Section_checkbox_Multiple_Archive=//div[@class="flex items-center top__left"]//div[@class="react-switch-bg"]
 Tasks_Section_checkbox_Multiple_Unarchive=//div[@class="flex items-center top__left"]//div[@class="react-switch-bg"]
-Taskpage_Taskadded_View=//span[text()='#text#']
+Taskpage_Taskadded_View=//p[text()='#text#']
+Taskpage_Task_View=//span[text()='#text#']
 Tasks_Section_Tag=//p[text()='#text#']/ancestor::tr//button[@data-for='tag-tooltip']
 Tasks_Section_Tag_Close=//div[@class='relative modal']//button[@class='absolute right-0 z-10 top-2']
 Tasks_Section_Add_Tag=//div[@class=' css-1q12wug']
@@ -234,8 +240,10 @@ Tasks_Section_View_Saved_Filter=//div[@class='flex flex-col']//h2[text()='#text#
 Tasks_Section_Search=//input[@placeholder="Search"]
 
 Main_section_Snippets_Link=//nav[@class="w-full sidebar"]//span[text()='Snippets']
+Snippets_Section_Type=//button[text()='#text#']
 Snippets_Section_Create_Button=//button[text()='Create']
 Snippets_Section_Add_Type=//select[@id='type']
+Snippets_Section_Select_Type=//option[text()='#text#']
 Snippets_Section_Add_Name=//input[@id="name"]
 Snippets_Section_Add_Tag=//input[@aria-controls="react-select-2-listbox"]
 Snippets_Section_Add_Body=//div[@class="ql-container ql-snow"]
@@ -280,32 +288,32 @@ Templates_Section_Add_Subject=//input[@id='subject']
 Templates_Section_Add_Tag=//input[@aria-controls="react-select-2-listbox"]
 Templates_Section_Add_Body=//div[@class="ql-container ql-snow"]
 Templates_Section_Create_Add=//button[text()='Add']
-Templates_Section_Edit=//span[text()="#text#"]//ancestor::tr//button[@data-for='edit']
-Templates_Section_Edit_Update=//button[@type='submit' and text()='Edit']
+Templates_Section_Edit=//span[text()="#text#"]//ancestor::tr//button[@data-for='edit-tooltip']
+Templates_Section_Edit_Update=//button[@type='submit' and text()='Update']
 Templatepage_Templateadded_Message=//div[text()='Template Added']
 Templatepage_Templateadded_View=//span[text()='#text#']
-Templates_Section_View=//span[text()="#text#"]//ancestor::tr//button[@data-for='view']
+Templates_Section_View=//span[text()="#text#"]//ancestor::tr//button[@data-for='view-tooltip']
 Templates_Section_View_Assertion=//p[text()='#text#']
-Templates_Section_View_Close=//button[@data-for='close']
-Templates_Section_Tag=//span[text()="#text#"]//ancestor::tr//button[@data-for='tag']
+Templates_Section_View_Close=//button[@data-for='close-tooltip']
+Templates_Section_Tag=//span[text()="#text#"]//ancestor::tr//button[@data-for='tag-tooltip']
 Templates_Section_Tag_Close=//div[@class='relative modal']//button[@class='absolute right-0 z-10 top-2']
 Templates_Section_Add_Tag=//div[@class=' css-1q12wug']
 Templates_Section_View_Add_Tag=//span[text()='#text#']/ancestor::tr//div[@class="flex items-center"]//button[@type='button']
 Templates_Section_View_Add_Tag_Assertion=//div[@class="z-10 py-1"]//div[text()='#text#']
 Templates_Section_Remove_Tag=//div[@class='flex flex-wrap gap-2 mt-4 tags']//div[text()='#text#']//button[@type='button']
 Templates_Section_checkbox_Multiple=//span[text()='#text#'] /ancestor::tr//input[@type="checkbox"]
-Templates_Section_checkbox_Multiple_Tag=//div[@class="flex items-center top__left"]//button[@data-for='tag']
-Templates_Section_Archive=//span[text()='#text#']/ancestor::tr//button[@data-for='archive']
+Templates_Section_checkbox_Multiple_Tag=//div[@class="flex items-center top__left"]//button[@data-for='tag-tooltip']
+Templates_Section_Archive=//span[text()='#text#']/ancestor::tr//button[@data-for='archive-tooltip']
 Templates_Section_Archive_Assertion=//div[@id='SUCCESS1 Template(s) Archived']
 Templates_Section_Unarchivepage=//div[@class='react-switch-bg']
-Templates_Section_Unarchive=//span[text()='#text#']/ancestor::tr//button[@data-for='unarchive']
+Templates_Section_Unarchive=//span[text()='#text#']/ancestor::tr//button[@data-for='unarchive-tooltip']
 Templates_Section_Unarchive_Assertion=//div[@id='SUCCESS1 Template(s) Unarchived']
 Templates_Section_checkbox_Multiple_Archive=//div[@class="flex items-center top__left"]//div[@class="react-switch-bg"]
 Templates_Section_checkbox_Multiple_Unarchive=//div[@class="flex items-center top__left"]//div[@class="react-switch-bg"]
 Templatepage_Templateadded_View=//span[text()='#text#']
-Templates_Section_Delete=//span[text()='#text#']/ancestor::tr//button[@data-for='delete']
+Templates_Section_Delete=//span[text()='#text#']/ancestor::tr//button[@data-for='delete-tooltip']
 Templates_Section_Delete_Confirmation=//div[@class="flex justify-end buttons"]//button[2]
-Templates_Section_checkbox_Multiple_Delete=//div[@class="flex items-center top__left"]//button[@data-for='Delete']
+Templates_Section_checkbox_Multiple_Delete=//div[@class="flex items-center top__left"]//button[@data-for='Delete-tooltip']
 Templates_Section_View_Deletenotes=//div[@class="flex gap-3"]//button[@data-for='delete']
 Templates_Section_View_Deletenotes_Assertion=//div[text()='Deleted Note Successfully']
 
@@ -344,3 +352,24 @@ Sequences_Deactivate=//a[text()='#text#']/ancestor::tr//td//div[@class="react-sw
 Sequences_Select=//a[text()='#text#']
 Sequences_Activate_Assertion=//div[text()='Sequence Activated']
 Sequences_Deactivate_Assertion=//div[text()='Sequence Deactivated']
+Sequences_Section_Edit_Name=//h3[@class="w-full whitespace-pre-wrap"]
+Sequences_Section_Edit=//input[@type="text"]
+Sequences_Section_Contacts=//a[text()='Contacts']
+Sequences_Section_Add_Contact=//button[text()='Add Contact']
+Sequences_Section_Assign_Contact=//div[@class=" css-1d8n9bt"]
+Sequences_Section__Assign_Contact_Add=//button[text()='Add']
+Sequences_Section_Select_Contact=//div[text()='#text# #text_2#']
+Sequences_Section_Assign_Contact_Assertion=//span[text()='#text# #text_2#']
+Sequences_Section_Assign_Contact_Message=//div[text()='New contact has been added']
+Sequences_Section_Select_Assigned_Contact=//span[text()='#text# #text_2#']/ancestor::tr//input[@type="checkbox"]
+Sequences_Section_Remove_Contact=//button[@data-for='remove-tooltip']
+Sequences_Section_Remove_Confirmation=//button[text()='Yes']
+Sequences_Section_Remove_Assertion=//div[text()='Sequence contact(s) has been removed successfully']
+Sequences_Section_Delete=//a[text()='#text#']/ancestor::tr//button[@data-for='delete-tooltip']
+Sequences_Section_Settings=//a[text()='Settings']
+Sequences_Section_Settings_Sun=//button[text()='Sun']
+Sequences_Section_Settings_Sat=//button[text()='Sat']
+Sequences_Section_Settings_Time=//input[@id='startTime']
+Sequences_Section_Settings_Reply_To_Email=//input[@id='Replies To Any Email'] 
+Sequences_Section_Settings_Save=//button[text()='Save']
+Sequences_Section_Settings_Assertion=//div[text()='Sequence updated successfully']
