--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,9 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+orbs:
+  newman: postman/newman@0.0.2
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -17,7 +20,14 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
-
+  postmanexecution:
+    executor: newman/postman-newman-docker
+    steps:
+      - checkout
+      - newman/newman-run:
+          collection: ./postman/CI_CRM_Postman_Collection.json
+          environment: ./postman/Postman_Environment.json
+          global: ./postman/Postman_Globals.json
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
