--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,11 @@ jobs:
       - newman/newman-run:
           collection: ./postman/CI_CRM_Postman_Collection.json
           environment: ./postman/Postman_Environment.json
-          global: ./postman/Postman_Globals.json
+          globals: ./postman/Postman_Globals.json
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  crm-app-workflow:
     jobs:
       - say-hello
+      - postmanexecution
