--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ version: 2.1
 orbs:
   newman: postman/newman@0.0.2
   cypress: cypress-io/cypress@1.29.0
+executors:
+  with-chrome:
+    docker:
+      - image: 'cypress/browsers:node14.16.0-chrome90-ff88'
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -35,4 +39,7 @@ workflows:
     jobs:
       - say-hello
       - postmanexecution
-      - cypress/run
+      - cypress/run:
+          executor: with-chrome
+          browser: chrome
+          spec: cypress/integration/accountsspec.js
