--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           collection: ./postman/CRM_Backend_Test_Collection.json
           environment: ./postman/Global.json
           globals: ./postman/QA_Environment.json
-          additional-options: verbose
+          additional-options: --verbose
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
