--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -26,8 +26,8 @@ Contacts_Section_Submit=//button[@type='submit' and text()='Add']
 Contactpage_Contactadded_Message=//div[text()='Contact Added']
 Contactpage_Contactadded_View=//td[text()='#text#']
 Contactpage_Contactedited_View=//td[text()='#text#']/parent::tr//td[text()='#text_2#']
-Contactpage_Contactadded_View_Expand=(.//section[contains(@class,'details')]//button[contains(@class,'white')])[2]
-Contactpage_Contactadded_View_Close=(.//section[contains(@class,'details')]//button[contains(@class,'white')])[1]
+Contactpage_Contactadded_View_Expand=//div[@class="absolute top-0 flex flex-col items-center justify-center "]//button[2]
+Contactpage_Contactadded_View_Close=//div[@class="absolute top-0 flex flex-col items-center justify-center "]//button[1]
 Contacts_Section_Edit=//td[text()='#text#']/parent::tr//td[@id="edit-and-delete"]//button[3]
 Contacts_Section_Edit_Update=//button[@type='submit' and text()='Update']
 Contacts_Section_Edit_Assertion=//div[text()='Contact updated successfully']
@@ -89,8 +89,21 @@ Contacts_Section_Saved_Filter=//div[@class='h-screen overflow-auto ']//p[text()=
 Contacts_Section_Search_Filter=//div[@class="relative "]//input[@placeholder="Search Views"]
 Contacts_Section_View_Saved_Filter=//div[@class='flex flex-col']//h2[text()='#text#']
 Contacts_Section_Invalid_Email_Message=//p[text()="Invalid email address"]
-
-
+Contacts_Section_Account_View=//span[text()='#text#']
+Contacts_Section_Add_To_Sequence=//button[@data-for="Add to sequence-tooltip"]
+Contacts_Section_Assign_Sequence=//div[@class=" css-1d8n9bt"]
+Contacts_Section_Select_Sequences=//div[text()='#text#']
+Contacts_Section_Added_Sequences_Assertion=//div[text()='New contact has been added']
+Contacts_Section_View_Sequences=//div[@class="w-full h-full tabs"]//span[text()='Sequences']
+Contacts_Section_Sequences_Assertion=//h2[text()='#text#']
+Contacts_Section_View_Send_Email=//button[@data-for="Send Email-tooltip"]
+Contacts_Section_Email_Send=//button[text()='Send']
+Contacts_Section_Emailsub=//input[@id="rsubject"]
+Contacts_Section_Emailbody=//div[@class="ql-editor ql-blank"]
+Contacts_Section_Email_Send_Message=//div[text()='Message Sent Successfully']
+Contacts_Section_View_Emails=//span[text()='Emails']
+Contacts_Section_View_Email_Send=//h1[text()='#text#']
+Contacts_Section_View_Add_Task=//button[@data-for="Add Task-tooltip"]
 
 Main_section_Accounts_Link=//nav[@class="w-full sidebar"]//span[text()='Accounts']
 Accounts_Section_Create_Button=//button[@type="button"]//span[text()='Create']
@@ -171,6 +184,8 @@ Accounts_Section_View_Saved_Filter=//div[@class='flex flex-col']//h2[text()='#te
 Accounts_Section_Invalid_Website_Message=//p[text()='URL is not valid']
 Accounts_Section_Search=//input[@placeholder="Search"]
 Accounts_Section_Search_Assertion=//span[text()='#text#']
+Accounts_Section_View_Add_Contact=//button[@data-for="Add Contact-tooltip"]
+Accounts_Section_Already_Exist_Message=//div[text()='Company Already Exists']
 
 Main_section_Tasks_Link=//nav[@class="w-full sidebar"]//span[text()='Tasks']
 Tasks_Section_Create_Button=//button[@type="button"]//span[text()='Create']
