--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -255,11 +255,12 @@ Tasks_Section_Delete=//div[@class="flex flex-col gap-2 px-2 py-2"]//button[2]
 Tasks_Section_Delete_Confirmation=//div[@class="flex justify-end buttons"]//button[2]
 Tasks_Section_checkbox_Multiple_Delete=//div[@class="flex gap-4 px-4 py-2"]//button[5]
 Tasks_Section_Complete=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[@id='complete']
-Tasks_Section_Complete_Assertion=//p[text()='#text#']/ancestor::tr//span[text()='COMPLETED']
+Tasks_Section_Complete_Assertion=//p[text()='#text#']/ancestor::tr//span[contains(text(),'Completed')]
 Tasks_Section_Notcomplete=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[@id='incomplete']
-Tasks_Section_Notcomplete_Assertion=//p[text()='#text#']/ancestor::tr//span[text()='NOT COMPLETED']
+Tasks_Section_Notcomplete_Assertion=//p[text()='#text#']/ancestor::tr//span[contains(text(),'Due')]
 Tasks_Section_Skip=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[2]
 Tasks_Section_Skip_Assertion=//p[text()='#text#']/ancestor::tr//span[text()='Skipped Task']
+Tasks_Section_Undoskip_Assertion=//p[text()='#text#']/ancestor::tr//span[contains(text(),'Due')]
 Tasks_Section_Undoskip=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[2]
 Tasks_Section_Filter=//button[text()='Filter']
 Tasks_Section_Create_Filter=//p[text()='Filters']
@@ -440,7 +441,7 @@ Sequences_Select=//a[text()='#text#']
 Sequences_Activate_Assertion=//div[text()='Sequence Activated successfully']
 Sequences_Deactivate_Assertion=//div[text()='Sequence Deactivated successfully']
 Sequences_Section_Edit_Name=//h3[@class="w-full whitespace-pre-wrap"]
-Sequences_Section_Edit=//input[@type="text"]
+Sequences_Section_Edit_Name=//input[@type="text"]
 Sequences_Section_Contacts=//a[text()='Contacts']
 Sequences_Section_Add_Contact=//button[text()='Add Contact']
 Sequences_Section_Assign_Contact=//div[@class=" css-1d8n9bt"]
@@ -452,7 +453,11 @@ Sequences_Section_Select_Assigned_Contact=//span[text()='#text# #text_2#']/ances
 Sequences_Section_Remove_Contact=//button[@data-for='remove-tooltip']
 Sequences_Section_Remove_Confirmation=//button[text()='Yes']
 Sequences_Section_Remove_Assertion=//div[text()='Sequence contact(s) has been removed successfully']
-Sequences_Section_Delete=//a[text()='UI_Testing192331']/ancestor::tr//button[2]
+Sequences_Section_Delete_Sequence=//a[text()='#text#']/ancestor::tr//button[2]
+Sequences_Section_Clone_Sequence=//a[text()='#text#']/ancestor::tr//button[1]
+Sequences_Section_Delete_Sequence_Assertion=//div[text()='Sequence deleted successfully!']
+Sequences_Section_Clone_Sequence_Assertion=//div[text()='Sequence cloned successfully']
+Sequences_Section_Cloned_Sequence=//a[text()='#text# - c...']
 Sequences_Section_Settings=//a[text()='Settings']
 Sequences_Section_Settings_Sun=//button[text()='Sun']
 Sequences_Section_Settings_Sat=//button[text()='Sat']
@@ -460,6 +465,20 @@ Sequences_Section_Settings_Time=//input[@id='startTime']
 Sequences_Section_Settings_Reply_To_Email=//input[@id='Replies To Any Email'] 
 Sequences_Section_Settings_Save=//button[text()='Save']
 Sequences_Section_Settings_Assertion=//div[text()='Sequence updated successfully']
+Sequences_Section_Task_Seq_Name=//span[text()='#text#']
+Sequences_Section_Task_Description=//p[text()='#text#']
+Sequences_Section_Complete=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[@id='complete']
+Sequences_Section_Complete_Assertion=//p[text()='#text#']/ancestor::tr//span[contains(text(),'Completed')]
+Sequences_Section_Skip=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[2]
+Sequences_Section_Skip_Assertion=//p[text()='#text#']/ancestor::tr//span[text()='Skipped Task']
+Sequences_Section_Update_Task=//span[text()='#text# #text_2#']/ancestor::tr//span[text()='4']
+Sequences_Section_Notcomplete=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[@id='incomplete']
+Sequences_Section_Notcomplete_Assertion=//p[text()='#text#']/ancestor::tr//span[contains(text(),'Due')]
+Sequences_Section_Undoskip_Assertion=//p[text()='#text#']/ancestor::tr//span[contains(text(),'Due')]
+Sequences_Section_Undoskip=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[2]
+Sequences_Section_Updated_Task=//span[text()='#text# #text_2#']/ancestor::tr//span[text()='2']
+Sequence_Section_Outbox_Assertion=//td[text()='#text#']/parent::tr//td[text()='#text_2#']
+Sequences_Section_Contact_View=//span[text()='#text# #text_2#']
 
 Landing_Page_Blubrd_Logo=//img[@class="w-auto h-auto"]
 Main_Section_Dashboard_Link=//span[text()='Dashboard']
@@ -475,3 +494,4 @@ Main_Section_Setting_Link=//span[text()='Setting']
 Profile_Section_Text_Profile=//h1[text()='Profile']
 Main_Section_Notification_Link=//span[text()='Notification']
 Notification_Section_Text_Notification=//h1[text()='Notification']
+Main_Section_Outbox_Link=//span[text()='Outbox']
