--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -476,9 +476,13 @@ Sequences_Section_Notcomplete=//p[text()='#text#']/ancestor::tr//div[@class="fle
 Sequences_Section_Notcomplete_Assertion=//p[text()='#text#']/ancestor::tr//span[contains(text(),'Due')]
 Sequences_Section_Undoskip_Assertion=//p[text()='#text#']/ancestor::tr//span[contains(text(),'Due')]
 Sequences_Section_Undoskip=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[2]
-Sequences_Section_Updated_Task=//span[text()='#text# #text_2#']/ancestor::tr//span[text()='2']
+Sequences_Section_Updated_Task=//span[text()='#text# #text_2#']/ancestor::tr//span[text()='3']
 Sequence_Section_Outbox_Assertion=//td[text()='#text#']/parent::tr//td[text()='#text_2#']
 Sequences_Section_Contact_View=//span[text()='#text# #text_2#']
+Sequences_Section_No_Data=//p[text()='Oops, No data found for the Search Query']
+Sequences_Section_Upload_Contact=//button[@data-for='upload csv-tooltip']
+Sequences_Section_Upload_Confirm=//button[text()='Continue & Import to sequence']
+
 
 Landing_Page_Blubrd_Logo=//img[@class="w-auto h-auto"]
 Main_Section_Dashboard_Link=//span[text()='Dashboard']
