--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -337,7 +337,7 @@ Templates_Section_Type=//button[text()='#text#']
 Templates_Section_Add_Type=//select[@id='type']
 Templates_Section_Add_Name=//input[@id="name"]
 Templates_Section_Add_Subject=//input[@id='subject']
-Templates_Section_Add_Tag=//div[@id='tags-select--multi']
+Templates_Section_Add_Tag=//div[@class=" css-1ycgwcm-control"]
 Templates_Section_Add_Body=//div[@class="ql-container ql-snow"]
 Templates_Section_Create_Add=//button[text()='Add']
 Templates_Section_Edit=//span[text()='#text#']/ancestor::tr//td[@id='edit-and-delete']//button[4]
@@ -350,7 +350,7 @@ Templates_Section_View_Assertion=//p[text()='#text#']
 Templates_Section_View_Close=//button[@id="modal__close--btn"]
 Templates_Section_Tag=//span[text()='#text#']/ancestor::tr//td[@id='edit-and-delete']//button[1]
 Templates_Section_Tag_Close=//button[@id="modal__close--btn"]
-Templates_Section_Add_Tag=//div[@class=' css-1q12wug']
+Templates_Section_Add_Extra_Tag=//div[@class=" css-1d8n9bt"]
 Templates_Section_Select_Tag=//div[text()='Create "#text#"']
 Templates_Section_View_Add_Tag=//span[text()='#text#']/ancestor::tr//div[@class="flex items-center"]//button[@type='button']
 Templates_Section_View_Add_Tag_Assertion=//div[@class="z-10 py-1"]//div[text()='#text#']
@@ -482,7 +482,7 @@ Sequences_Section_Contact_View=//span[text()='#text# #text_2#']
 Sequences_Section_No_Data=//p[text()='Oops, No data found for the Search Query']
 Sequences_Section_Upload_Contact=//button[@data-for='upload csv-tooltip']
 Sequences_Section_Upload_Confirm=//button[text()='Continue & Import to sequence']
-
+Sequences_Section_Team=//button[text()='Team']
 
 Landing_Page_Blubrd_Logo=//img[@class="w-auto h-auto"]
 Main_Section_Dashboard_Link=//span[text()='Dashboard']
