--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -402,8 +402,8 @@ Templates_Section_Insert_Variables_Accounts_Linkedin=//span[text()='linkedin']
 Templates_Section_Insert_Variables_Accounts_Twitter=//span[text()='twitter']
 Templates_Section_Insert_Variables_Accounts_Facebook=//span[text()='facebook']
 Templates_Section_Insert_Variables_Accounts_Industry=//span[text()='industry']
-Templates_Section_Attachments=//button[text()='Attachments']
-Templates_Section_Attachments_Assertion=//h3[text()='#text#']
+Templates_Section_Attachments=//button[text()='Template_Upload.csv']
+Templates_Section_Attachments_Assertion=//button[text()='Template_Upload.csv']
 Templates_Section_Upload=//button[@id="upload"]
 Templates_Section_Upload_Next=//button[text()='Next']
 Templates_Section_Upload_Confirm=//button[text()='Continue & Import to template']
@@ -515,3 +515,5 @@ Register_Section_Register=//button[text()='Register']
 Register_Section_Welcome_Message=//div[text()='Welcome! #text#']
 Register_Section_Verify_Message=//h1[text()='Please verify your email address.']
 Logout=//div[@class="flex flex-col items-center justify-center w-full"]//button
+Register_Section_Already_Signedup_Message=//p[text()='Email already exists']
+Register_Section_No_User_Message=//p[text()='No user with the email found']
