--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -76,13 +76,13 @@ applicaation_Header_user_dropdown_Link=//div[@class='relative profile-card']//bu
 applicaation_Header_user_LogoutLink=//div[@class='relative profile-card']//button[./span[text()='Log Out']]
 Contacts_Section_Filter=//span[text()='Filters']
 Contacts_Section_Create_Filter=//button[text()='New Filters']
-Contacts_Section_Create_Filter_Sortby=//ul[@class="flex flex-wrap -mb-px h-11"]//button[text()='#text#']
+Contacts_Section_Create_Filter_Sortby=//button[text()='#text#']
 Contacts_Section_Create_Filter_Lastmodified=//div[@class='mb-6']//div[text()='Last Modified Date']
 Contacts_Section_Create_Filter_Tags=//div[@class="select__value-container select__value-container--is-multi css-1d8n9bt"]
 Contacts_Section_Filter_Select_Tag=//div[text()='#text#']
 Contacts_Section_Create_Filter_Title=//div[@class="my-3"]//input[@name='title']
-Contacts_Section_Create_Filter_Stage=//div[@class="my-3"]//button[text()='Stage']
-Contacts_Section_Create_Filter_Type=//div[@class="my-3"]//button[text()='Type']
+Contacts_Section_Create_Filter_Stage=//input[@value='New']
+Contacts_Section_Create_Filter_Type=//input[@value='Customer']
 Contacts_Section_Create_Filter_State=//div[@class="my-3"]//input[@name='state']
 Contacts_Section_Create_Filter_Country=//div[@class="my-3"]//input[@name='country']
 Contacts_Section_Create_Filter_Company=//div[@class="my-3"]//button[text()='Company']
@@ -95,6 +95,8 @@ Contacts_Section_Search_Filter=//div[@class="flex justify-center my-4 mt-8"]//in
 Contacts_Section_View_Saved_Filter=//h2[text()='#text#']
 Contacts_Section_Edit_Saved_Filter=//h2[text()='#text#']/parent::div//div[@class="relative inline-block text-left"]//button[1]
 Contacts_Section_Edit_Filter=//button[text()='Edit']
+Contacts_Section_Delete_Filter=//button[text()='Delete']
+Contacts_Section_Delete_Filter_Assertion=//div[text()='Filter Deleted Successfully']
 Contacts_Section_Update_Filter=//button[text()='Update ']
 Contacts_Section_Filter_Update=//button[text()='Update']
 Contacts_Section_Invalid_Email_Message=//p[text()="Invalid email address"]
@@ -212,6 +214,7 @@ Accounts_Section_View_Saved_Filter=//h2[text()='#text#']
 Accounts_Section_Edit_Saved_Filter=//h2[text()='#text#']/parent::div//div[@class="relative inline-block text-left"]//button[1]
 Accounts_Section_Edit_Filter=//button[text()='Edit']
 Accounts_Section_Delete_Filter=//button[text()='Delete']
+Accounts_Section_Delete_Filter_Assertion=//div[text()='Filter Deleted Successfully']
 Accounts_Section_Update_Filter=//button[text()='Update ']
 Accounts_Section_Filter_Update=//button[text()='Update']
 Accounts_Section_Invalid_Website_Message=//p[text()='URL is not valid']
@@ -275,22 +278,28 @@ Tasks_Section_Skip=//p[text()='#text#']/ancestor::tr//div[@class="flex items-cen
 Tasks_Section_Skip_Assertion=//p[text()='#text#']/ancestor::tr//span[text()='Skipped Task']
 Tasks_Section_Undoskip_Assertion=//p[text()='#text#']/ancestor::tr//span[contains(text(),'Due')]
 Tasks_Section_Undoskip=//p[text()='#text#']/ancestor::tr//div[@class="flex items-center justify-center gap-2"]//button[2]
-Tasks_Section_Filter=//button[text()='Filter']
-Tasks_Section_Create_Filter=//p[text()='Filters']
-Tasks_Section_Filter_Sort_Descending=//button[@aria-label="Descending-tooltip"]
-Tasks_Section_Filter_Type=//div[@class="my-3"]//div[@class="select__control css-n0jikd-control"]//div[text()='Type']
+Tasks_Section_Filter=//span[text()='Filters']
+Tasks_Section_Create_Filter=//button[text()='New Filters']
+Tasks_Section_Filter_Sort_Descending=//button[text()='Type']
+Tasks_Section_Filter_Type=//button[text()='Call Log']
 Tasks_Section_Filter_Daterange=//div[@class="my-3"]//input[@placeholder="Date Range"]
-Tasks_Section_Filter_Tags=//div[@class="my-3"]//div[@class="select__control css-n0jikd-control"][2]
-Tasks_Section_Filter_Status=//div[@class="my-3"]//div[@class=" css-b62m3t-container"][2]
-Tasks_Section_Filter_Createdtype=//div[@class="my-3"]//div[@class=" css-b62m3t-container"][3]
-Tasks_Section_Create_Save_Filter=//div[@class='flex flex-col gap-5 justify-center mt-8']//button[text()='Save ']
+Tasks_Section_Create_Filter_Tags=//div[@class="select__value-container select__value-container--is-multi css-1d8n9bt"]
+Tasks_Section_Filter_Select_Tag=//div[text()='#text#']
+Tasks_Section_Filter_Status=//input[@value="notComplete"]
+Tasks_Section_Filter_Createdtype=//input[@value="notManualTask"]
+Tasks_Section_Create_Save_Filter=//button[text()='Save ']
 Tasks_Section_Save_Filter_Name=//input[@name='filterName']
-Tasks_Section_Save_Filter=//div[@class='flex justify-end gap-8 mt-5']//button[text()='Save']
+Tasks_Section_Save_Filter=//button[text()='Save']
 Tasks_Section_Save_Filter_Assertion=//div[text()='Filter Saved Successful']
 Tasks_Section_Saved_Filter=//div[@class='h-screen overflow-auto ']//p[text()='Saved Filters']
-Tasks_Section_Search_Filter=//div[@class="relative "]//input[@placeholder="Search Views"]
-Tasks_Section_View_Saved_Filter=//div[@class='flex flex-col']//h2[text()='#text#']
-Tasks_Section_Search=//input[@placeholder="Search"]
+Tasks_Section_Search_Filter=//div[@class="flex justify-center my-4 mt-8"]//input[@placeholder="Search"]
+Tasks_Section_View_Saved_Filter=//h2[text()='#text#']
+Tasks_Section_Edit_Saved_Filter=//h2[text()='#text#']/parent::div//div[@class="relative inline-block text-left"]//button[1]
+Tasks_Section_Edit_Filter=//button[text()='Edit']
+Tasks_Section_Delete_Filter=//button[text()='Delete']
+Tasks_Section_Delete_Filter_Assertion=//div[text()='Filter Deleted Successfully']
+Tasks_Section_Update_Filter=//button[text()='Update ']
+Tasks_Section_Filter_Update=//button[text()='Update']
 
 Main_section_Snippets_Link=//nav[@class="w-full sidebar"]//span[text()='Snippets']
 Snippets_Section_Type_Personal=//button[text()='Personal']
