--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,11 @@ jobs:
 workflows:
   crm-app-workflow:
     jobs:
-      #- say-hello
-      - postmanexecution
+      #- postmanexecution
+       - cypress/run:
+          executor: with-chrome
+          browser: chrome
+          spec: cypress/integration/accountsspec_ci.js
+          post-steps:
+            - store_test_results:
+                path: cypress/results
