--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,18 @@ executors:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
   postmanexecution:
     executor: newman/postman-newman-docker
     steps:
@@ -31,10 +43,4 @@ workflows:
   crm-app-workflow:
     jobs:
       #- postmanexecution
-       - cypress/run:
-          executor: with-chrome
-          browser: chrome
-          spec: cypress/integration/accountsspec_ci.js
-          post-steps:
-            - store_test_results:
-                path: cypress/results
+       - say-hello
