--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -324,7 +324,7 @@ Snippets_Section_Tag=//span[text()='#text#']/ancestor::tr//td[@id='edit-and-dele
 Snippets_Section_Tag_Close=//button[@id="modal__close--btn"]
 Snippets_Section_Add_Extra_Tag=//div[@class=" css-1d8n9bt"]
 Snippets_Section_Select_Tag=//div[text()='Create "#text#"']
-Snippets_Section_View_Add_Tag=//span[text()='#text#']/ancestor::tr//div[@class="flex items-center"]//button[@type='button']
+Snippets_Section_View_Add_Tag=//span[text()='#text#']/ancestor::tr//div[@class="flex items-center"]
 Snippets_Section_View_Add_Tag_Assertion=//div[@class="z-10 py-1"]//div[text()='#text#']
 Snippets_Section_Remove_Tag=//div[@class='flex flex-wrap gap-2 mt-4 tags']//div[text()='#text#']//button[@type='button']
 Snippets_Section_checkbox_Multiple=//span[text()='#text#'] /ancestor::tr//input[@type="checkbox"]
@@ -538,3 +538,18 @@ Register_With_Google=//span[text()='Sign in with Google'][2]
 Register_With_Google_Email=//input[@id="identifierId"]
 Register_With_Google_Email_Next=//span[text()='Next']
 Register_With_Google_Password=//input[@type="password"]
+
+Settings_Section_Account_Firstname=//input[@value='#text#'] 
+Settings_Section_Account_Phone=//input[@id='phone']
+Settings_Section_User_Teams=//a[text()='Users & Teams']
+Settings_Section_User_Teams_Email=//input[@id="email"]
+Settings_Section_User_Teams_Invite=//button[text()='Send Invite']
+Settings_Section_User_Teams_Invite_Popup=//div[text()='Invitation sent successfully']
+Settings_Section_Security=//a[text()='Security']
+Settings_Section_Security_Oldpassword=//input[@id="oldpassword"]
+Settings_Section_Security_Newpassword=//input[@id="newpassword"]
+Settings_Section_Security_Cnfpassword=//input[@id="passwordConfirm"]
+Settings_Section_Security_Submit=//button[@type="submit"]
+
+
+Account_Section_Name_Sorting=//span[text()='Account']
