--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -324,7 +324,7 @@ Snippets_Section_Tag=//span[text()='#text#']/ancestor::tr//td[@id='edit-and-dele
 Snippets_Section_Tag_Close=//button[@id="modal__close--btn"]
 Snippets_Section_Add_Extra_Tag=//div[@class=" css-1d8n9bt"]
 Snippets_Section_Select_Tag=//div[text()='Create "#text#"']
-Snippets_Section_View_Add_Tag=//span[text()='#text#']/ancestor::tr//div[@class="flex items-center"]
+Snippets_Section_View_Add_Tag=//span[text()='#text#']/ancestor::tr/td[@id='tags']//button[@type="button"]
 Snippets_Section_View_Add_Tag_Assertion=//div[@class="z-10 py-1"]//div[text()='#text#']
 Snippets_Section_Remove_Tag=//div[@class='flex flex-wrap gap-2 mt-4 tags']//div[text()='#text#']//button[@type='button']
 Snippets_Section_checkbox_Multiple=//span[text()='#text#'] /ancestor::tr//input[@type="checkbox"]
