--- a/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
+++ b/cypress/fixtures/Xpath_Locators_Properties_File/xpath_Locators.properties
@@ -21,7 +21,7 @@ Contacts_Section_Create_Code=//input[@name='code']
 Contacts_Section_Create_Linkedin=//input[@name='linkedin']
 Contacts_Section_Create_Facebook=//input[@name='facebook']
 Contacts_Section_Create_Twitter=//input[@name='twitter']
-Contacts_Section_Create_Tag=//div[@class=" css-dlcn9s"]
+Contacts_Section_Create_Tag=//div[@id='tags-select--multi']
 Contacts_Section_Create_Stage=//select[@id="stage"]
 Contacts_Section_Create_Type=//select[@id="type"]
 Contacts_Section_Submit=//button[@type='submit' and text()='Add']
@@ -134,12 +134,12 @@ Contacts_Section_Email_Preview=//button[@data-for="email-preview"]
 Accounts_Section_Insert_Variables_Assertion=//p[text()='#text##text_2##text_3##text_4##text_5##text_6##text_7##text_8##text_9#']
 Contacts_Section_Insert_Variables_Assertion=//p[text()='#text##text_2##text_3##text_4##text_5##text_6##text_7#']
 
-Main_section_Accounts_Link=//nav[@class="w-full sidebar"]//span[text()='Accounts']
+Main_section_Accounts_Link=//span[text()='Accounts']
 Accounts_Section_Create_Button=//button[@type="button"]//span[text()='Create']
 Accounts_Section_Create_Fullname=//input[@id='fullName']
 Accounts_Section_Create_Phone=//input[@placeholder='1 (702) 123-4567']
 Accounts_Section_Create_Website=//input[@id='website']
-Accounts_Section_Create_Tags=//div[@class=" css-dlcn9s"]
+Accounts_Section_Create_Tags=//div[@id='tags-select--multi']
 Accounts_Section_Create_Account_Owner=//input[@name='owner']
 Accounts_Section_Create_Showmore=//button[text()='show more']
 Accounts_Section_Create_Address=//input[@id='address']
@@ -223,7 +223,7 @@ Accounts_Section_Search_Assertion=//span[text()='#text#']
 Accounts_Section_View_Add_Contact=//button[@data-for="Add Contact-tooltip"]
 Accounts_Section_Already_Exist_Message=//div[text()='Company Already Exists']
 
-Main_section_Tasks_Link=//nav[@class="w-full sidebar"]//span[text()='Tasks']
+Main_section_Tasks_Link=//span[text()='Tasks']
 Tasks_Section_Create_Button=//button[@type="button"]//span[text()='Create']
 Tasks_Section_Create_Note=//div[contains(@class,'w-full flex items')]//button[1]
 Tasks_Section_Create_Call=//div[contains(@class,'w-full flex items')]//button[2]
@@ -301,14 +301,14 @@ Tasks_Section_Delete_Filter_Assertion=//div[text()='Filter Deleted Successfully'
 Tasks_Section_Update_Filter=//button[text()='Update ']
 Tasks_Section_Filter_Update=//button[text()='Update']
 
-Main_section_Snippets_Link=//nav[@class="w-full sidebar"]//span[text()='Snippets']
+Main_section_Snippets_Link=//span[text()='Snippets']
 Snippets_Section_Type_Personal=//button[text()='Personal']
 Snippets_Section_Type_Team=//button[text()='Team']
 Snippets_Section_Create_Button=//button[@type="button"]//span[text()='Create']
 Snippets_Section_Add_Type=//select[@id='type']
 Snippets_Section_Select_Type=//option[text()='#text#']
 Snippets_Section_Add_Name=//input[@id="name"]
-Snippets_Section_Add_Tag=//div[@class=" css-1ycgwcm-control"]
+Snippets_Section_Add_Tag=//div[@id='tags-select--multi']
 Snippets_Section_Add_Body=//div[@class="ql-container ql-snow"]
 Snippets_Section_Create_Add=//button[text()='Add']
 Snippetpage_Snippetadded_Message=//div[text()='Snippet  Added']
@@ -351,7 +351,7 @@ Snippets_Section_Upload_Confirm=//button[text()='Continue & Import to snippets']
 Snippets_Section_Upload_Complete=//button[text()='Done']
 
 
-Main_section_Templates_Link=//nav[@class="w-full sidebar"]//span[text()='Templates']
+Main_section_Templates_Link=//span[text()='Templates']
 Templates_Section_Type_Personal=//button[text()='Personal']
 Templates_Section_Type_Team=//button[text()='Team']
 Templates_Section_Create_Button=//button[@type="button"]//span[text()='Create']
@@ -359,7 +359,7 @@ Templates_Section_Type=//button[text()='#text#']
 Templates_Section_Add_Type=//select[@id='type']
 Templates_Section_Add_Name=//input[@id="name"]
 Templates_Section_Add_Subject=//input[@id='subject']
-Templates_Section_Add_Tag=//div[@class=" css-1ycgwcm-control"]
+Templates_Section_Add_Tag=//div[@id='tags-select--multi']
 Templates_Section_Add_Body=//div[@class="ql-container ql-snow"]
 Templates_Section_Create_Add=//button[text()='Add']
 Templates_Section_Edit=//span[text()='#text#']/ancestor::tr//td[@id='edit-and-delete']//button[4]
@@ -427,7 +427,7 @@ Templates_Section_Upload_Confirm=//button[text()='Continue & Import to template'
 Templates_Section_Upload_Complete=//button[text()='Done']
 
 
-Main_section_Sequences_Link=//nav[@class="w-full sidebar"]//span[text()='Sequences']
+Main_section_Sequences_Link=//span[text()='Sequences']
 Sequences_Section_Create_Button=//button[@type="button"]//span[text()='Create']
 Sequences_Section_Create_First_Step=//span[text()='Add First Step']
 Sequences_Section_Create_Step=//div[@class="buttons flex items-center gap-x-2"]//button[text()='Add Step']
